<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stock\'t</string>
    <string name="hint_enter_password">Enter your password</string>
    <string name="hint_enter_username">Enter your email</string>
    <string name="password">Password</string>
    <string name="enable_low_stock_notification">Enable Low Stock Notification</string>
    <string name="click_for_data_metrics">Click for Data Metrics</string>
    <string name="welcome">Welcome!</string>
</resources>