<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityy">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/app_name"
            android:paddingBottom="16dp" />

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/hint_enter_username"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_password"
            android:textSize="20sp"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Close"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>